Criando e organizando tema do evento

--- a/index.html
+++ b/index.html
@@ -142,70 +142,165 @@
               <input type="radio" id="accent-cyan" name="color" value="" />
             </div>
 
-            <div class="body-xs">
-              <label for="event">Tema do evento</label>
-              <input
+            <legend class="body-xs margin-bottom">Tema do evento</legend>
+
+            <div class="event body-sm">
+
+              <label for="event">
+              <input              
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Aniversário"
               />
-              <input
-                type="radio"
-                id="event"
-                name="event"
-                placeholder="Infantil"
+              <div class="card">           
+              <img src="/assets/img/aniversario.png" alt="">
+              <figcaption>Aniversário</figcaption>
+            </div>         
+          </label>              
+                  
+              <label for="event">
+              <input 
+              type="radio" 
+              id="event" 
+              name="event" 
+              placeholder="Infantil"
               />
+              <div class="card">     
+              <img src="/assets/img/infantil.png" alt="">
+              <figcaption>Infantil</figcaption>              
+            </div>
+              </label>
+
+              <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Formatura"
               />
+              <div class="card">
+              <img src="/assets/img/formatura.png" alt="">
+              <Figcaption>Formatura</Figcaption>
+              </div>
+              </label>
+
+              <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Casamento"
               />
+              <div class="card">  
+              <img src="/assets/img/casamento.png" alt="">
+              <figcaption>Casamento</figcaption>
+              </div>
+             </label>
+
+             <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Chá de bebê"
               />
+              <div class="card">  
+              <img src="/assets/img/cha-de-bebe.png" alt="">
+              <figcaption>Chá de bebê</figcaption>
+            </div>
+             </label>
+
+             <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Chá de panela"
               />
+              <div class="card">  
+              <img src="/assets/img/cha-de-panela.png" alt="">
+              <figcaption>Chá de panela</figcaption>
+            </div>
+             </label>
+
+             <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Carnaval"
               />
+              <div class="card">
+              <img src="/assets/img/carnaval.png" alt="">
+              <figcaption>Carnaval</figcaption>
+            </div>
+             </label>
+
+             <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Páscoa"
               />
+              <div class="card">  
+              <img src="/assets/img/pascoa.png" alt="">
+              <figcaption>Páscoa</figcaption>
+            </div>
+             </label>
+
+             <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="São João"
               />
+              <div class="card">  
+              <img src="/assets/img/sao-joao.png" alt="">
+              <figcaption>São joão</figcaption>
+            </div>
+              </label>
+
+              <label for="event">
               <input
                 type="radio"
                 id="event"
                 name="event"
                 placeholder="Halloween"
               />
-              <input type="radio" id="event" name="event" placeholder="Natal" />
-              <input type="radio" id="event" name="event" placeholder="Outro" />
+              <div class="card">  
+              <img src="/assets/img/halloween.png" alt="">
+              <figcaption>Halloween</figcaption>              
+            </div>
+             </label>
+
+             <label for="event">
+              <input 
+                type="radio" 
+                id="event" 
+                name="event" 
+                placeholder="Natal" 
+              />
+              <div class="card">  
+              <img src="/assets/img/natal.png" alt="">
+              <figcaption>Natal</figcaption>
+            </div>
+              </label>
+
+              <label for="">
+              <input 
+                type="radio" 
+                id="event" 
+                name="event" 
+                placeholder="Outro" 
+              />
+              <div class="card">  
+              <img src="/assets/img/outro.png" alt="">
+              <figcaption>Outro</figcaption>
+            </div>
+              </label>
             </div>
 
             <div class="">
