--- a/index.html
+++ b/index.html
@@ -310,21 +310,22 @@
                 <input type="checkbox" id="toggle">
                 <label class="body-xs" for="toggle"></label>
               </div>
-              <figcaption id="toggle-text">Escuro</figcaption>
+              <figcaption class="body-xs" id="toggleText">Escuro</figcaption>
           </div>
 
             <div class="right-content">
             <legend class="body-xs">Foto de capa</legend>
             <div class="drop-area">              
               <label class="body-xs" for="file">Selecionar</label>
-              <input type="file" id="file" name="file" accept="image/*" />
+              <input type="file" id="file" name="file" accept="image/*"/>
             </div>
+            <figcaption class="body-placeholder" id="upload">Nenhum arquivo selecionado</figcaption>
           </div>
           </div>
         </div>
 
             <legend class="heading-sm">Dados para contato</legend>
-            <div class="input-wrapper">
+            <div class="fullname input-wrapper1">
               <label class="body-xs" for="full-name">Nome</label>
               <input
                 class="input"
@@ -332,7 +333,12 @@
                 id="full-name"
                 name="full-name"
                 placeholder="Nome completo"
+                required
               />
+              <div class="fullname error">
+                <img src="/assets/icons/circle-alert.svg" alt="">
+                <span class="body-xs">Campo obrigatório</span>
+            </div>
             </div>
             <div class="input-wrapper">
               <label class="body-xs" for="email">E-mail</label>
