--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="input-wrapper">
               <label class="body-xs" for="title">Título</label>
               <input
-                class="input"
+                class="input hover-label"
                 type="text"
                 id="title"
                 name="title"
@@ -46,7 +46,7 @@
               <div>
                 <label class="body-xs" for="start">Início</label>
                 <input
-                  class="input uppercase"
+                  class="input uppercase hover-label"
                   type="datetime-local"                  
                   id="start"
                   name="start"
@@ -55,7 +55,7 @@
               </div>
               <div>
                 <label class="body-xs" for="end">Fim</label>
-                <input class="input uppercase" type="datetime-local" id="end" name="end" lang="pt-BR" />
+                <input class="input uppercase hover-label" type="datetime-local" id="end" name="end" lang="pt-BR" />
               </div>
             </div>
 
@@ -77,7 +77,7 @@
             <div class="body-xs grid-2">
               <label for="local">Local</label>
                 <input
-                  class="input"
+                  class="input hover-label"
                   type="text"
                   id="local"
                   name="local"
@@ -89,7 +89,7 @@
             <div class="input-wrapper">
               <label class="body-xs" for="description">Descrição</label>
               <textarea
-                class="body-sm"
+                class="body-sm hover-label"
                 id="description"
                 name="description"
                 placeholder="Escreva sobre os detalhes do evento." 
@@ -345,7 +345,7 @@
             <div>
               <label class="body-xs" for="email">E-mail</label>
               <input
-                class="input"
+                class="input hover-label"
                 type="email"
                 id="email"
                 name="email"
@@ -356,7 +356,7 @@
             <div>
               <label class="body-xs" for="telephone">Telefone</label>
               <input 
-                class="input"
+                class="input hover-label"
                 type="tel"
                 id="tel"
                 name="telephone"
